hosted/src/oke/ingress-app.yaml
# Use 2 Ingress since the parameter replacement work differently in NGINX for / and /app (see annotation)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ##TF_VAR_prefix##-app-ingress
  annotations:    
    nginx.ingress.kubernetes.io/rewrite-target: /$2 
    # nginx.ingress.kubernetes.io/affinity: "cookie"   
    # nginx.ingress.kubernetes.io/session-cookie-path: "/"    
spec:
  ingressClassName: nginx    
  rules:
    - http: 
        paths:
          - path: /##TF_VAR_prefix##/app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ##TF_VAR_prefix##-app-service
                port:    
                  number: 80
